# ML-Prediction-Service

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
app/: configuration.py  main.py  model.py  mongodb.py  schema.py  utils.py
models/: model.pkl  test_model.pkl
notebooks/: IrisData_Exploration.ipynb  Iris_test.ipynb  Iris_train.ipynb
tests/: test_main.py  test_mongodb.py
