[tool.poetry]
name = "yougov-mle-app"
version = "0.1.0"
description = "ML prediction microservice with FastAPI, MongoDB & Docker"
readme = "Readme.md"
authors = ["Anish Navalgund <anishk.navalgund@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pandas = "^2.0.0"
pymongo = "^4.5.0"
scikit-learn = "^1.3.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.0.0"
black = "23.7.0"
isort = "5.12.0"
pre-commit = "^3.4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
